Add link to Css3 spec

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-	<h1>box-shadow tool<h1>
+	<h1><a href="http://www.w3.org/TR/css3-background/#the-box-shadow">box-shadow</a> tool<h1>
 </header>
 
 <section id="sample-box">
