--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 	<h1><a href="http://www.w3.org/TR/css3-background/#the-box-shadow">box-shadow</a> tool<h1>
 </header>
 
-<section id="sample-box">
-</section>
-
-<section id="controls">
-</section>
-
-<section id="css-output">
-	<textarea></textarea>
-</section>
+<article class="widget box-shadow">
+	<section id="sample-box">
+	</section>
+	<section id="controls">
+	</section>
+	<section id="css-output">
+		<textarea></textarea>
+	</section>
+</article>
 
 <footer>
 	<p>This is the footer</p>
