--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 <script src="js/underscore-1.1.6.js"></script>
 <script src="js/backbone.js"></script>
 <script src="js/backbone-localstorage.js"></script>
+<script src="js/Color.js"></script>
 <script src="js/script.js"></script>
 
 </body>
