Add basic controls

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 	<section id="sample-box">
 	</section>
 	<section id="controls">
+		<label for="angle">Angle</label><input id="angle" type="text">
+		<label for="angle">Horizontal offset</label><input id="horizontal-offset" type="text">
+		<label for="angle">Vertical offset</label><input id="vertical-offset" type="text">
+		<label for="angle">Blur radius</label><input id="blur-radius" type="text">
+		<label for="angle">Spread distance</label><input id="spread-distance" type="text">
+		<label for="angle">Color</label><input id="color" type="text">
 	</section>
 	<section id="css-output">
 		<textarea></textarea>
@@ -25,36 +31,6 @@
 <footer>
 	<p>This is the footer</p>
 </footer>
-
-<!-- <script type="text/template" id="item-template">
-	<div class="todo <%= done ? 'done' : '' %>">
-		<div class="display">
-			<input class="check" type="checkbox" <%= done ? 'checked="checked"' : '' %> />
-			<div class="todo-text"></div>
-			<span class="todo-destroy"></span>
-		</div>
-		<div class="edit">
-			<input class="todo-input" type="text" value="" />
-		</div>
-	</div>
-</script>
-
-<script type="text/template" id="stats-template">
-	<% if (total) { %>
-		<span class="todo-count">
-			<span class="number"><%= remaining %></span>
-			<span class="word"><%= remaining == 1 ? 'item' : 'items' %></span> left.
-		</span>
-	<% } %>
-	<% if (done) { %>
-		<span class="todo-clear">
-			<a href="#">
-				Clear <span class="number-done"><%= done %></span>
-				completed <span class="word-done"><%= done == 1 ? 'item' : 'items' %></span>
-			</a>
-		</span>
-	<% } %>
-</script> -->
 	 
 <script src="js/json2.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
