--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 	<section id="sample-box">
 	</section>
 	<section id="controls">
-		<label for="angle">Angle</label><input id="angle" type="text">
-		<label for="angle">Horizontal offset</label><input id="horizontal-offset" type="text">
-		<label for="angle">Vertical offset</label><input id="vertical-offset" type="text">
-		<label for="angle">Blur radius</label><input id="blur-radius" type="text">
-		<label for="angle">Spread distance</label><input id="spread-distance" type="text">
-		<label for="angle">Color</label><input id="color" type="text">
+		<label for="angle">Angle(deg)</label><input id="angle" type="text">
+		<label for="angle">Horizontal offset(px)</label><input id="horizontal-offset" type="text">
+		<label for="angle">Vertical offset(px)</label><input id="vertical-offset" type="text">
+		<label for="angle">Blur radius(px)</label><input id="blur-radius" type="text">
+		<label for="angle">Spread distance(px)</label><input id="spread-distance" type="text">
+		<label for="angle">Color(rgb hex)</label><input id="color" type="text">
 	</section>
 	<section id="css-output">
 		<textarea></textarea>
