--- a/index.html
+++ b/index.html
@@ -48,15 +48,25 @@
 </article>
 
 <footer>
-	<p>This is the footer</p>
+	<section id="about">
+		<h2>About</h2>
+		<p>A GUI for the CSS3 box-shadow property written with the <a href="">Backbone.js</a> framework</p>
+		<p>Still in development</p>
+	</section>
+	<section id="credits">
+		<h2>Credits</h2>
+		<ul>
+			<li><a href="http://css3gen.com/box-shadow/">CSS3Gen</a> for the inspiration</li>
+		</ul>
+	</section>
+	<section id="source">
+	</section>
 </footer>
 	 
-<script src="js/json2.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 <script>!window.jQuery && document.write('<script src="http://code.jquery.com/jquery-1.6.2.min.js"><\/script>');</script>
 <script src="js/underscore-1.1.6.js"></script>
 <script src="js/backbone.js"></script>
-<script src="js/backbone-localstorage.js"></script>
 <script src="js/Color.js"></script>
 <script src="js/script.js"></script>
 
