--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 
 <head>
 <title>CSS3 Studio: box-shadow</title>
-<link href="style.css" media="all" rel="stylesheet" type="text/css"/>
+<link href='http://fonts.googleapis.com/css?family=Coustard' rel='stylesheet' type='text/css'>
+<link href="css/page.css" media="all" rel="stylesheet" type="text/css"/>
+<link href="css/widget.css" media="all" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
 
-<header>
-	<h1><a href="http://www.w3.org/TR/css3-background/#the-box-shadow">box-shadow</a> tool<h1>
-</header>
-
-<article class="widget box-shadow">
+<article id="box-shadow">
 	<section id="sample-box-panel">
 		<div id="sample-box"></div>
 	</section>
@@ -48,11 +46,15 @@
 </article>
 
 <footer>
+	<h1>A '<code>box-shadow</code>' Tool</h1>
+	
 	<section id="about">
 		<h2>About</h2>
-		<p>A GUI for the CSS3 box-shadow property written with the <a href="">Backbone.js</a> framework</p>
+		<p>A GUI for the CSS3 <a href="http://www.w3.org/TR/css3-background/#the-box-shadow">box-shadow</a> property 
+		written with the <a href="">Backbone.js</a> framework</p>
 		<p>Still in development</p>
 	</section>
+	
 	<section id="credits">
 		<h2>Credits</h2>
 		<ul>
@@ -60,6 +62,8 @@
 		</ul>
 	</section>
 	<section id="source">
+		<h2>Source</h2>
+		<p><a href="http://github.com/mgiulio/box-shadow-tool">GitHub</a></p>
 	</section>
 </footer>
 	 
@@ -71,5 +75,4 @@
 <script src="js/script.js"></script>
 
 </body>
-
 </html>
