Simplify Controls view

--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
 	</section>
 	<fieldset id="controls">
 		<div>
-			<label for="horizontal-offset" title="horizontal offset">hOff</label>
-			<input id="horizontal-offset" type="text">
+			<label for="horizontalOffset" title="horizontal offset">hOff</label>
+			<input id="horizontalOffset" type="text">
 			px
 		</div>
 		<div>
-			<label for="vertical-offset" title="vertical offset">vOff</label>
-			<input id="vertical-offset" type="text">
+			<label for="verticalOffset" title="vertical offset">vOff</label>
+			<input id="verticalOffset" type="text">
 			px
 		</div>
 		<div>
-			<label for="blur-radius" title="blur distance">blur</label>
-			<input id="blur-radius" type="text">
+			<label for="blurRadius" title="blur distance">blur</label>
+			<input id="blurRadius" type="text">
 			px
 		</div>
 		<div>
-			<label for="spread-distance" title="spread distance">spread</label>
-			<input id="spread-distance" type="text">
+			<label for="spreadDistance" title="spread distance">spread</label>
+			<input id="spreadDistance" type="text">
 			px
 		</div>
 		<div>
