--- a/index.html
+++ b/index.html
@@ -18,22 +18,46 @@
 		<div>
 			<label for="horizontalOffset" title="horizontal offset">hOff</label>
 			<input id="horizontalOffset" type="text">
-			px
+			<select size="1" title="Units">
+				<option selected="selected">px</option>
+				<option>em</option>
+				<option>cm</option>
+				<option>mm</option>
+				<option>in</option>
+			</select>
 		</div>
 		<div>
 			<label for="verticalOffset" title="vertical offset">vOff</label>
 			<input id="verticalOffset" type="text">
-			px
+			<select size="1" title="Units">
+				<option selected="selected">px</option>
+				<option>em</option>
+				<option>cm</option>
+				<option>mm</option>
+				<option>in</option>
+			</select>
 		</div>
 		<div>
 			<label for="blurRadius" title="blur distance">blur</label>
 			<input id="blurRadius" type="text">
-			px
+			<select size="1" title="Units">
+				<option selected="selected">px</option>
+				<option>em</option>
+				<option>cm</option>
+				<option>mm</option>
+				<option>in</option>
+			</select>
 		</div>
 		<div>
 			<label for="spreadDistance" title="spread distance">spread</label>
 			<input id="spreadDistance" type="text">
-			px
+			<select size="1" title="Units">
+				<option selected="selected">px</option>
+				<option>em</option>
+				<option>cm</option>
+				<option>mm</option>
+				<option>in</option>
+			</select>
 		</div>
 		<div>
 			<label for="color" title="color">color</label>
