--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 		<div id="sample-box"></div>
 	</section>
 	<fieldset id="controls">
-		<div>
-			<label for="horizontalOffset" title="horizontal offset">hOff</label>
-			<input id="horizontalOffset" type="text">
+		<div id="horizontalOffset">
+			<label for="hoff" title="horizontal offset">hOff</label>
+			<input id="hoff" type="text">
 			<select size="1" title="Units">
 				<option selected="selected">px</option>
 				<option>em</option>
@@ -26,9 +26,9 @@
 				<option>in</option>
 			</select>
 		</div>
-		<div>
-			<label for="verticalOffset" title="vertical offset">vOff</label>
-			<input id="verticalOffset" type="text">
+		<div id="verticalOffset">
+			<label for="voff" title="vertical offset">vOff</label>
+			<input id="voff" type="text">
 			<select size="1" title="Units">
 				<option selected="selected">px</option>
 				<option>em</option>
@@ -37,9 +37,9 @@
 				<option>in</option>
 			</select>
 		</div>
-		<div>
-			<label for="blurRadius" title="blur distance">blur</label>
-			<input id="blurRadius" type="text">
+		<div id="blurRadius">
+			<label for="blur" title="blur distance">blur</label>
+			<input id="blur" type="text">
 			<select size="1" title="Units">
 				<option selected="selected">px</option>
 				<option>em</option>
@@ -48,9 +48,9 @@
 				<option>in</option>
 			</select>
 		</div>
-		<div>
-			<label for="spreadDistance" title="spread distance">spread</label>
-			<input id="spreadDistance" type="text">
+		<div id="spreadDistance">
+			<label for="distance" title="spread distance">spread</label>
+			<input id="distance" type="text">
 			<select size="1" title="Units">
 				<option selected="selected">px</option>
 				<option>em</option>
@@ -59,9 +59,9 @@
 				<option>in</option>
 			</select>
 		</div>
-		<div>
-			<label for="color" title="color">color</label>
-			<input id="color" type="text">
+		<div id="color">
+			<label for="col" title="color">color</label>
+			<input id="col" type="text">
 			as you like
 		</div>
 	</fieldset>
