--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
 	
 	<section id="about">
 		<h2>About</h2>
-		<p>A GUI for the CSS3 <a href="http://www.w3.org/TR/css3-background/#the-box-shadow">box-shadow</a> property 
-		written with the <a href="">Backbone.js</a> framework</p>
-		<p>Still in development</p>
+		<p>
+			I started this project mainly to make some practice with the<a href="">Backbone.js</a> framework.
+			As you can see from the live demo above it is a GUI for the CSS3 
+			<a href="http://www.w3.org/TR/css3-background/#the-box-shadow">box-shadow</a> property.
+		</p>
 	</section>
 	
 	<section id="credits">
