--- a/index.html
+++ b/index.html
@@ -15,59 +15,26 @@
 		<div id="sample-box"></div>
 	</section>
 	<fieldset id="controls">
-		<div id="horizontalOffset">
-			<label for="hoff" title="horizontal offset">hOff</label>
-			<input id="hoff" type="text">
-			<select size="1" title="Units">
-				<option selected="selected">px</option>
-				<option>em</option>
-				<option>cm</option>
-				<option>mm</option>
-				<option>in</option>
-			</select>
-		</div>
-		<div id="verticalOffset">
-			<label for="voff" title="vertical offset">vOff</label>
-			<input id="voff" type="text">
-			<select size="1" title="Units">
-				<option selected="selected">px</option>
-				<option>em</option>
-				<option>cm</option>
-				<option>mm</option>
-				<option>in</option>
-			</select>
-		</div>
-		<div id="blurRadius">
-			<label for="blur" title="blur distance">blur</label>
-			<input id="blur" type="text">
-			<select size="1" title="Units">
-				<option selected="selected">px</option>
-				<option>em</option>
-				<option>cm</option>
-				<option>mm</option>
-				<option>in</option>
-			</select>
-		</div>
-		<div id="spreadDistance">
-			<label for="distance" title="spread distance">spread</label>
-			<input id="distance" type="text">
-			<select size="1" title="Units">
-				<option selected="selected">px</option>
-				<option>em</option>
-				<option>cm</option>
-				<option>mm</option>
-				<option>in</option>
-			</select>
-		</div>
-		<div id="color">
-			<label for="col" title="color">color</label>
-			<input id="col" type="text">
-			as you like
-		</div>
 	</fieldset>
 	<textarea id="css-output" rows="7"></textarea>
 	<div style="clear: both;">&nbsp;</div>
 </article>
+
+<script id="length-property" type="text/x-jquery-tmpl">
+	<div id="${name}">
+		<label for="${name.substring(0,4)}" title="${title}">${label}</label>
+		<input id="${name.substring(0,4)}" type="text">
+		{{if name !== 'color'}}
+			<select size="1" title="Units">
+				<option>px</option>
+				<option>em</option>
+				<option>cm</option>
+				<option>mm</option>
+				<option>in</option>
+			</select>
+		{{/if}}
+	</div>
+</script>
 
 <footer>
 	<h1>A '<code>box-shadow</code>' Tool</h1>
@@ -97,6 +64,7 @@
 <script>!window.jQuery && document.write('<script src="http://code.jquery.com/jquery-1.6.2.min.js"><\/script>');</script>
 <script src="js/underscore-1.1.6.js"></script>
 <script src="js/backbone.js"></script>
+<script src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.js"></script>
 <script src="js/script.js"></script>
 
 </body>
