--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
 		</p>
 	</section>
 	
+	<section id="lib">
+		<h2>Used Libraries</h2>
+			<ul>
+				<li>Backbone.js</li>
+				<li>Underscore</li>
+				<li>jQuery Tmpl</li>
+				<li>To Be Continued ...</li>
+			</ul>
+	</section>
+	
 	<section id="credits">
 		<h2>Credits</h2>
 		<ul>
