Remove rows attribute in textarea

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</section>
 	<fieldset id="controls">
 	</fieldset>
-	<textarea id="css-output" rows="7"></textarea>
+	<textarea id="css-output"></textarea>
 	<div style="clear: both;">&nbsp;</div>
 </article>
 
